# encasa

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.txt  TODO.txt.meta.yaml  done.txt  extension.crx  extension.pem  output.txt  r.bat  s.bat  serve  test.txt
extension/: manifest.json  n.html
src/: cli.rs  datetools.rs  gcal.rs  main.rs  routes.rs  todo.rs  view.rs
src/homepage_data/: Cargo.toml
src/homepage_data/src/: gcal.rs  lib.rs  todo.rs
src/homepage_view/: Cargo.toml  build.rs
src/homepage_view/src/: lib.rs
src/homepage_view/templates/: hello.html  main.js  style.css
templates/: hello.html  main.js
tools/: editlocal.py
tools/calimport/: Cargo.toml
tools/calimport/src/: main.rs
tools/calscrape/: .gitignore  client_secret.json  credentials.json  quickstart.py  s.bat  scrape_events.py
tools/win/: editlocal.reg
