[package]
name = "homepage"
version = "0.1.0"
authors = ["Kevin Watters <kevinwatters@gmail.com>"]

[build-dependencies]
askama = "0.6.3"

[dependencies]
askama = "0.6.3"

time = "*"
gotham = "*"
gotham_derive = "*"

hyper = "0.11"
futures = "0.1"
mime = "0.3"

serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"

chrono = { version = "*", features = ["serde"] }

shellexpand = "*"
linkify = "*"

humantime = "*"

nom = { version = "^3.2" }

lazy_static = { version = "1.0.0" }

regex = { version = "^0.2" }

clap = "*"
